[package]
name = "memoryhttpd"
description = "In-memory, multi-host HTTP server"
version = "0.2.0"
edition = "2021"
authors = ["Antoine Catton"]
readme = "README.md"
license = "ISC"
repository = "https://codeberg.org/acatton/memoryhttpd"

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }
http = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
simple_logger = "2.0.0"
